--- a/src/Style.css
+++ b/src/Style.css
@@ -44,13 +44,16 @@ section {
     margin-top: 0px;
 }
 
+
+
 .card {
     width: 175px;
     font-size: 12px;
     margin:0;
     float: left;
     width: 25%;
-    padding: 0 10px;
+    padding: 5px 10px;
+    
 }
 
 .card--image {
@@ -75,4 +78,8 @@ section {
 
 .bold {
     font-weight : bold;
+}
+
+#card--div {
+    background-color: indigo;
 }
