--- a/src/Style.css
+++ b/src/Style.css
@@ -11,7 +11,6 @@ body {
 nav {
     height: 70px;
     display: flex;
-    /* background-color: darkblue; */
     padding: 20px 36px;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
@@ -49,16 +48,19 @@ section {
 .card {
     width: 175px;
     font-size: 12px;
-    margin:0;
-    float: left;
-    width: 25%;
-    padding: 5px 10px;
-    
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: row;
+    float : left;
+    margin: 20px;
+    position: relative;
+    flex-wrap: wrap;
 }
 
 .card--image {
     width: 100%;
     border-radius: 9px;
+    margin-bottom: 9px;
 }
 
 .card--stats {
@@ -80,6 +82,12 @@ section {
     font-weight : bold;
 }
 
-#card--div {
-    background-color: indigo;
+.card--bage {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px ;
+    border-radius: 2px;
+    font-weight: bold;
 }
